// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render BlogsList with blogs 1`] = `
<DocumentFragment>
  <div
    class="blogs-container"
  >
    BlogItemBlogItemBlogItem
  </div>
</DocumentFragment>
`;

exports[`Should render BlogsList with empty array 1`] = `
<DocumentFragment>
  <div
    class="blogs-container"
  >
    <div
      class="empty-blogs-list"
    >
      No blogs - 
      <a>
        Create One Here!
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render BlogsList with searchFilter 1`] = `
<DocumentFragment>
  <div
    class="blogs-container"
  >
    BlogItemBlogItem
  </div>
</DocumentFragment>
`;
